cluster/production/devops/cyberchef/cyberchef-deploy/cyberchef-manifest.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cyberchef
---
apiVersion: v1
kind: Service
metadata:
  name: cyberchef
  namespace: cyberchef
  labels:
    app: cyberchef
spec:
  type: ClusterIP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 3600
  ports:
  - name: http
    port: 80
  selector:
    app: cyberchef
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cyberchef
  namespace: cyberchef
  labels:
    app: cyberchef        
    app.kubernetes.io/name: cyberchef
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cyberchef
  template:
    metadata:
      labels:
        app: cyberchef        
        app.kubernetes.io/name: cyberchef
    spec:
      containers:
      - image: ghcr.io/gchq/cyberchef:10.20.0
        imagePullPolicy: Always
        name: cyberchef
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            path: /
            port: 80
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-cyberchef-websecure
  namespace: cyberchef
  annotations:
    # For Homepage service discovery
    gethomepage.dev/href: "https://cyberchef.urbaman.cloud"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: "Cyberchef"
    gethomepage.dev/group: DevOps
    gethomepage.dev/icon: cyberchef.svg
    gethomepage.dev/app: cyberchef # optional, may be needed if app.kubernetes.io/name != ingressRoute metadata.name
    gethomepage.dev/name: "Cyberchef"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`cyberchef.urbaman.cloud`)
      services:
        - name: cyberchef
          port: 80
          serversTransport: traefik-cyberchef-transport
      middlewares:
        - name: security
          namespace: traefik
  tls:
    secretName: cyberchef-urbaman-cloud
    options:
      name: tlsoptions
      namespace: traefik
